Fixing checkbox spacing.

--- a/src/main/js/app.scss
+++ b/src/main/js/app.scss
@@ -47,6 +47,10 @@ body {
     color: map-get($theme-colors, "primary");
 }
 
+.invalid-feedback {
+    position: absolute;
+}
+
 .navbar {
     z-index: 10;
 }
